Calculo dos Resultados

--- a/app/views/championships/show.html.erb
+++ b/app/views/championships/show.html.erb
@@ -1,17 +1,12 @@
-<% title "Championship" %>
-
+<% title @championship.name %>
 <p>
-  <strong>Name:</strong>
-  <%= @championship.name %>
-</p>
-<p>
-  <strong>Dates:</strong>
   <%= @championship.dates %>
 </p>
 <p>
-  <strong>Description:</strong>
   <%= @championship.description %>
 </p>
+
+<%= render :partial => 'result' %>
 
 <p>
   <%= link_to "Edit", edit_championship_path(@championship) %> |
