--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,27 +1,12 @@
-<h1>Bem Vindo <%= current_user.email %></h1>
-
 <% if @pilot %>
-    <p>Aqui a sua classificação nos seus campeonatos!</p>
-    <% @pilot.championships.each do |c| %>
-        <h3><%= c.name %></h3>
-        <table>
-        <% c.championship_results.order(:position).each do |r| %>
-            <tr <%= "style='font-weight:bold;'".html_safe if r.pilot_id == @pilot.id %>>
-            <td>
-            <%= "#{r.position} - #{r.pilot.name} (#{r.pilot.team.name}) com #{r.points}" %>
-            </td>
-            <% races = c.races.order(:date) %>
-            <% races.each do |race| %>
-                <% result = RaceResult.where(:pilot_id => r.pilot_id).where(:race_id => race.id).all %>
-                <td>
-                <%= "#{result[0].points} (#{result[0].position})" if result[0] %>
-                </td>
-            <% end %>
-            </tr>
-        <% end  %>
-        </table>
-    <% end %>
-
+  <h1>Bem Vindo <%= @pilot.name %></h1>
+  <p>Aqui sua classificação no seu Campeonato corrente:</p>
+  <%= render :partial => 'pilots/results' %>
 <% else %>
-
+    <h2>Todos Campeonados</h2>
+    <% @championships.each do |c|%>
+        <h2><%= c.name %></h2>
+        <%= render :partial => 'championships/result_short', :locals => { :@championship => c } %>
+    <% end %>
 <% end %>
+
